# compilers_projects

./: README.md
Singularity/: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.l  Makefile  Parser.cpp  Parser.y  PropuestaLenguajeProyectoLargo.txt  README.md  main.c  main.cpp
Singularity/examples/: Function.sin  arguments.sin  arreglo.sin  bad_recursion.sin  comparisonoperators.sin  complete_example1.sin  complete_example2.sin  condition.sim  ejemplo_completo2.sin  finite_recursion.sin  global_variable.sin  if.sim  if.sin  if_incorrect_condition.sin  incorrect_list_access.sin  incorrect_list_assignment.sin  incorrect_matrix_access.sin  incorrect_matrix_assignment.sin  infinite_recursion.sin  list.sin  matrix.sin  not.sin  print.sin  read.sin  read_print.sin  read_sum_print.sin  return.sin  set.sin  stringcompare.sin  undeclared_matrix.sin  undeclared_variable.sin  while.sim  while.sin  while_counting.sin  while_counting_incorrect_range.sin  while_incorrect_condition.sin
Singularity/lib/: Parser.cpp
Singularity/src/: CMakeLists.txt  Makefile  main.cc
Singularity/src/exceptions/: CMakeLists.txt  exceptions.cc  exceptions.hh
Singularity/src/node/: Answer.cc  Answer.hh  ArithmeticOperation.cc  ArithmeticOperation.hh  Block.cc  Block.hh  BooleanOperation.cc  BooleanOperation.hh  CMakeLists.txt  ComparisonOperation.cc  ComparisonOperation.hh  DataPositionAssignment.cc  DataPositionAssignment.hh  DataStructure.cc  DataStructure.hh  Function.cc  Function.hh  FunctionCall.cc  FunctionCall.hh  If.cc  If.hh  NotOperation.cc  NotOperation.hh  Otherwise.cc  Otherwise.hh  (+21 more)
(+54 files in other folders)
